# FastAPI-Backend-Template.

./: .env  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  tasks.py  users.py
app/core/: config.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  task.py  user.py
app/repositories/: tasks.py  users.py
app/schemas/: task.py  user.py
app/services/: auth.py  tasks.py  users.py
scripts/: seed_admin.py  test_local.sh
tests/: conftest.py  test_auth.py
